crates/edm-core/tests/snapshots/views__opaque_raw_w48.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit_all(&raw, width)"
---
== PAYLOAD =====================================
not json at all {
