crates/edm-core/tests/snapshots/views__points_of_interest_w100.snap
---
source: crates/edm-core/tests/views.rs
expression: "emit(blocks, width)"
---
== POINTS OF INTEREST  2 found by scan =============================================================
+------------+----------------+----------+---------+-----------------+----------+
|  Market ID | Name           | Type     | Economy | Faction         | Found at |
+============+================+==========+=========+=================+==========+
| 3223343616 | Jaques Station | Coriolis | Tourism | Colonia Council | docks[0] |
|          - | Brady Terminal | outpost  | -       | -               | docks[1] |
+------------+----------------+----------+---------+-----------------+----------+
